# xyz

./: .gitignore  Untitled Diagram.drawio  counts.csv  imogen-arch.drawio  interval_tracker.py  server.py
protected/: interval_tracker.py  pyproject.toml  run.sh
protected/templates/: main.html
public/: CI_design.html  CI_design.spj  index.html  simple-crypto.html
public/CI_design_files/: js  laptop
public/timberland_ci_design/: impress.html  js  showpreper_source.spj  timb.html  vendors.619b32ae93a4f667a8f6.js.download
public/timberland_ci_design/timb_files/: impress.619b32ae93a4f667a8f6.js  js
templates/: index.html  main.html
