[tool.poetry]
name = "protected"
version = "0.1.0"
description = ""
authors = ["technillogue <wisepoison@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
json2html = "^1.3.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
